ITCS and formatting

--- a/2021/FPM/H3/homework.tex
+++ b/2021/FPM/H3/homework.tex
@@ -18,16 +18,16 @@
 	Suppose $G$ is not cyclic. Then, by \emph{Lemma 2.2.14} in the notes,
 	for all $g\in G$ we have $o(g)<\abs G$. Since $|G|>1$ there exists
 	a $g\in G$ such that $g\not=e$ which implies $o(g)>1$.
-	Let $H=\lra g$ for one such element. Then
+	Let $H=\angles g$ for one such element. Then
 	\begin{align*}
-		\abs H = \abs{\lra g} = o(g) \hs\text{which implies}\hs 1 < \abs H < \abs G
+		\abs H = \abs{\angles g} = o(g) \hs\text{which implies}\hs 1 < \abs H < \abs G
 	\end{align*}
 	which makes $H$ a subgroup of $G$ with
 	the desired characteristics.\\\\
 	Now suppose $G$ is cyclic. Then let $g\in G$ be such that
-	$G=\lra g$. Let $n=\abs{G}$. Then, since $n>1$ and $n$ is not prime,
+	$G=\angles g$. Let $n=\abs{G}$. Then, since $n>1$ and $n$ is not prime,
 	there exist integers $k,l>1$ such that $n=kl$.
-	Now consider the cyclic subgroup $H=\lra{g^k}\leq G$. We have
+	Now consider the cyclic subgroup $H=\angles{g^k}\leq G$. We have
 	\begin{align*}
 		H =\{e, g^k, g^{2k}, ..., g^{(l-1)k}, g^{lk}, g^{(l+1)k}, ...\}.
 	\end{align*}
@@ -57,7 +57,7 @@
 
 \section*{Problem 2}
 
-Let $G=S_3$ and $H=\lra{(1\: 2)}$.
+Let $G=S_3$ and $H=\angles{(1\: 2)}$.
 
 \subsection*{(a)}
 
