--- a/2021/FPM/H5/homework.tex
+++ b/2021/FPM/H5/homework.tex
@@ -92,7 +92,7 @@
 
 \begin{proof}
 	Firstly, observe that $\abs{G_1}=\abs{G_2}=\abs{G_3}=100$.
-	Seconldy, note that $G_3=\lra{1}$. Further, we know from
+	Seconldy, note that $G_3=\angles{1}$. Further, we know from
 	\emph{Theorem 2.2.16} that $G_2$ must be cyclic, too. That is,
 	there exists an element $g\in G_2$ such that $o(g)=100$. The
 	same holds for $G_3$. Further, consider any element $g\in G_1$.
@@ -114,7 +114,7 @@
 
 
 \begin{lemma*}
-	Let $G=\lra{g}$ and $H=\lra{h}$ be cyclic groups such that
+	Let $G=\angles{g}$ and $H=\angles{h}$ be cyclic groups such that
 	$o(g)=o(h)=n$. Then $G\cong H$.
 \end{lemma*}
 
