--- a/2021/INF2D/notes/notes.tex
+++ b/2021/INF2D/notes/notes.tex
@@ -292,7 +292,7 @@ depth limit$n$ be any node and $g$ be the goal node.
 	of values.\\
 	Each $D_i$ consists of a set of allowable values, $\{v_1, ..., v_k\}$
 	for variable $X_i$. Each constraint $C_i$ consists of a pair
-	$\lra{\text{\emph{scope}}, \text{\emph{rel}}}$ where \emph{scope} is a
+	$\angles{\text{\emph{scope}}, \text{\emph{rel}}}$ where \emph{scope} is a
 	tuple of all the variables involved in the constraint and \emph{rel} is a
 	relation that needs to hold.
 \end{definition}
