--- a/2022/GEO/notes/notes.tex
+++ b/2022/GEO/notes/notes.tex
@@ -69,7 +69,7 @@
 \begin{definition}
 	A \emph{bilinear form} of a vector space $V$ over $K$ is a map
 	\begin{align*}
-		\lra{.,.} : V\times V \to K : (\vec v, \vec w) \mapsto \lra{\vec v, \vec w}.
+		\angles{.,.} : V\times V \to K : (\vec v, \vec w) \mapsto \angles{\vec v, \vec w}.
 	\end{align*}
 \end{definition}
 
@@ -81,18 +81,18 @@
 \end{lemma}
 
 \begin{lemma}
-	Let $V$ be finite-dimensional. Then $\lra{.,.}:V\times V\to K$ is non-degenerate if and only if
-	$f_{\lra{.,.}}:V\to V^*$ is an isomorphism.
+	Let $V$ be finite-dimensional. Then $\angles{.,.}:V\times V\to K$ is non-degenerate if and only if
+	$f_{\angles{.,.}}:V\to V^*$ is an isomorphism.
 \end{lemma}
 
 \begin{lemma}
-	The bilinear map $\lra{.,.}$ is symmetric if and only if
+	The bilinear map $\angles{.,.}$ is symmetric if and only if
 	\begin{align*}
-		f_{\lra{.,.}}=f_{\lra{.,.}}^*
+		f_{\angles{.,.}}=f_{\angles{.,.}}^*
 	\end{align*}
 	and anti-symmetric if and only if
 	\begin{align*}
-		f_{\lra{.,.}}=-f_{\lra{.,.}}^*.
+		f_{\angles{.,.}}=-f_{\angles{.,.}}^*.
 	\end{align*}
 \end{lemma}
 
