--- a/2022/HALG/homework-02/homework.tex
+++ b/2022/HALG/homework-02/homework.tex
@@ -26,7 +26,7 @@ We write $i=\sqrt{-1}$ and $\overline x = \overline{r+si} = r - si$.
 \end{claim*}
 
 \begin{claim*}[2]
-	The group of units of $\gaussint$ has order four. In particular, $\gaussint^\times = \lra{i}$.
+	The group of units of $\gaussint$ has order four. In particular, $\gaussint^\times = \angles{i}$.
 	\begin{proof}
 		Let $u=a+bi\in\C^\times$. Then there exists $x=c+di\in\C$ such that $(a+bi)(c+di) = 1$.
 		Equivalently,
@@ -50,7 +50,7 @@ We write $i=\sqrt{-1}$ and $\overline x = \overline{r+si} = r - si$.
 			i^2 = -1,\hs i^3 = -i, \hs i^4 = 1.
 		\end{align*}
 		Therefore all integer solutions correspond to a unit in $\gaussint$, showing
-		$\gaussint^\times=\{i,-i,1,-1\}$, and further $i$ is a generator, i.e. $\gaussint^\times=\lra{i}$.
+		$\gaussint^\times=\{i,-i,1,-1\}$, and further $i$ is a generator, i.e. $\gaussint^\times=\angles{i}$.
 	\end{proof}
 \end{claim*}
 
@@ -64,7 +64,7 @@ We write $i=\sqrt{-1}$ and $\overline x = \overline{r+si} = r - si$.
 		We note that $(\Z_q,+)$ is an abelian group. Since $n$ and $q$ are coprime, it follows from
 		\emph{Lagrange's theorem} that the order of $[n]$ in $(\Z_q,+)$ is $q$. Thus
 		\begin{align*}
-			\Z_q = \lra{[n]} = \{k[n] : k\in\Z\}.
+			\Z_q = \angles{[n]} = \{k[n] : k\in\Z\}.
 		\end{align*}
 		Noting $k[n]=[kn]$ by definition of $[n]$, we find
 		\begin{align*}
