--- a/2022/INT/notes/notes.tex
+++ b/2022/INT/notes/notes.tex
@@ -384,7 +384,7 @@
 	\begin{align*}
 		G = \{g^k : k \in \N\}.
 	\end{align*}
-	If such a $g$ exists, we say $G$ is cyclic and write $G=\lra{g}$.
+	If such a $g$ exists, we say $G$ is cyclic and write $G=\angles{g}$.
 \end{definition}
 
 \begin{definition}
@@ -408,7 +408,7 @@
 \end{theorem}
 
 \begin{theorem}[Lecture 8, Theorem 2]
-	Let $G=\lra{g}$ and let $\alpha\in\Z$. Then $G=\lra{g^\alpha}$ iff
+	Let $G=\angles{g}$ and let $\alpha\in\Z$. Then $G=\angles{g^\alpha}$ iff
 	$\gcd(\alpha,\abs{G})=1$.
 \end{theorem}
 
@@ -422,7 +422,7 @@
 
 \begin{theorem}[Lecture 8, Theorem 3]
 	Let $p$ prime and $i\in\Z$. Then $i$ is a primitive root modulo $p$ iff
-	$\Z_p^*=\lra{\overline i}$ where $\overline i$ denotes the coset of $i$ in
+	$\Z_p^*=\angles{\overline i}$ where $\overline i$ denotes the coset of $i$ in
 	$\Z_p$.
 \end{theorem}
 
