--- a/2022/AR/notes/notes.tex
+++ b/2022/AR/notes/notes.tex
@@ -612,7 +612,7 @@ To match pattern and target given substitution $\phi$:
 
 \begin{enumerate}
 	\item If pattern and target are identical then succeed with output $\phi$.
-	\item Otherwise, let $\lra{t_1, t_2}$ be the first disagreement pair.
+	\item Otherwise, let $\angles{t_1, t_2}$ be the first disagreement pair.
 	\item If $t_1$ is a variable then call match on pattern $\{t_2/t_1\}$ and target given $\phi\{t_2/t_1\}$.
 	\item Else fail.
 \end{enumerate}
@@ -774,7 +774,7 @@ $s$ and $t$ are arbitrary terms, standardised apart and $V=V(s)\cup V(t)$.
 	Let $L_1\Rightarrow R_1$ and $L_2\Rightarrow R_2$ be rewrite rules. A \emph{critical pair} is
 	a pair of expressions
 	\begin{align*}
-		\lra{R_1[\theta], L_1[\theta]\{R_2[\theta]/s[\theta]\}}
+		\angles{R_1[\theta], L_1[\theta]\{R_2[\theta]/s[\theta]\}}
 	\end{align*}
 	where $s$ is a non-variable sub-term of $L_1$ such that $s[\theta]=L_2[\theta]$ with
 	most general unifier $\theta$.
@@ -784,7 +784,7 @@ $s$ and $t$ are arbitrary terms, standardised apart and $V=V(s)\cup V(t)$.
 	An algorithm to test for local confluence works as follows:
 	\begin{enumerate}
 		\item Find all the critical pairs in set of rewrite rules $R$
-		\item For each critical pair $\lra{s_1, s_2}$: \begin{enumerate}
+		\item For each critical pair $\angles{s_1, s_2}$: \begin{enumerate}
 			      \item Find a normal form $s_1'$ of $s_1$
 			      \item Find a normal form $s_2'$ of $s_2$
 			      \item Check $s_1'=s_2'$, if not then fail
@@ -796,7 +796,7 @@ $s$ and $t$ are arbitrary terms, standardised apart and $V=V(s)\cup V(t)$.
 	The \emph{Knuth-Bendix Completion Algorithm} works as follows:
 	\begin{enumerate}
 		\item While there are non-conflatable critical pairs in $R$: \begin{enumerate}
-			      \item Take a critical pair $\lra{s_1, s_2}$ in $R$
+			      \item Take a critical pair $\angles{s_1, s_2}$ in $R$
 			      \item Normalise $s_1$ to $s_1'$ and $s_2$ to $s_2'$
 			      \item If $R\cup\{s_1'\Rightarrow s_2'\}$ is terminating then \begin{align*}
 				            R := R \cup \{s_1'\Rightarrow s_2'\}
@@ -928,7 +928,7 @@ Automated techniques include
 		\item \emph{denotational}: construct mathematical objects that describe the meaning.
 		      E.g. functions: $[\![C]\!]:S\to S$.
 		\item \emph{operational}: describe the steps of computation during execution. Either
-		      small-step ($\lra{C,\sigma}\to\lra{C',\sigma'}$) or big-step ($\lra{C,\sigma}\Downarrow\sigma'$).
+		      small-step ($\angles{C,\sigma}\to\angles{C',\sigma'}$) or big-step ($\angles{C,\sigma}\Downarrow\sigma'$).
 		\item \emph{axiomatic}: define axioms and rules of some logic of program. E.g. $\{P\}C\{Q\}$.
 	\end{itemize}
 \end{definition}
