--- a/2023/PRJ/aumann/main.tex
+++ b/2023/PRJ/aumann/main.tex
@@ -146,14 +146,14 @@
 		and observer $\alpha<\omega_1$.
 		Using \ref{borelcap}, we fix $A\in \Sigma_\R$ such that $\rank A>\alpha$.
 		Consider the characteristic function $\chi_A:\R\to\R$. Now we note
-		$\e(\chi_A,A)=\{1\}$, so $\lra{f,A}\in\inv\e(\{1\})$. Further, let
+		$\e(\chi_A,A)=\{1\}$, so $\angles{f,A}\in\inv\e(\{1\})$. Further, let
 		\begin{align*}
-			\lra{f,-}:\R & \to\cat{Meas}(\R,\R)\times\R, \\
-			x            & \mapsto \lra{f,x}.
+			\angles{f,-}:\R & \to\cat{Meas}(\R,\R)\times\R, \\
+			x               & \mapsto \angles{f,x}.
 		\end{align*}
-		Then $\inv{\lra{f,-}}(\inv\e(\{1\}))=A$. So, in particular,
+		Then $\inv{\angles{f,-}}(\inv\e(\{1\}))=A$. So, in particular,
 		\begin{align*}
-			\rank A = \rank(\inv{\lra{f,-}}(\inv\e(\{1\}))).
+			\rank A = \rank(\inv{\angles{f,-}}(\inv\e(\{1\}))).
 		\end{align*}
 		Now we note $f\in\cat{Meas}(\R,\R)$ and $A\in \Sigma_\R$, so $\{f\}\times A\in \Sigma_{\R^\R\times\R}$.
 		Specifically, $\{f\}\times A\subseteq\inv\e(\{1\})\in \Sigma_{\R^\R\times\R}$. Therefore
